--- a/index.html
+++ b/index.html
@@ -89,15 +89,15 @@
         <h2 class="mb-4">Habilidades Técnicas</h2>
         <div class="row">
           <div class="col-md-4">
-            <h4>Lenguajes</h4>
+            <h4 class="text-center">Lenguajes</h4>
             <p>C#, JavaScript, SQL, Python, Bash</p>
           </div>
           <div class="col-md-4">
-            <h4>Frameworks y Tecnologías</h4>
+            <h4 class="text-center">Frameworks y Tecnologías</h4>
             <p>ASP.NET MVC, AJAX, jQuery, Entity Framework</p>
           </div>
           <div class="col-md-4">
-            <h4>Herramientas</h4>
+            <h4 class="text-center">Herramientas</h4>
             <p>Visual Studio, VS Code, Git, Postman, Trello, IIS</p>
           </div>
         </div>
@@ -209,7 +209,7 @@
           ></a>
         </div>
         <p class="text-center mb-0">
-          &copy; 2025 La Perla. Todos los derechos reservados.
+          &copy; 2025 COPYRIGHT: Todos los derechos reservados.
         </p>
       </div>
     </footer>
